--- a/medals.html
+++ b/medals.html
@@ -4,6 +4,7 @@
     <h1>Welcome to our store!</h1>
     <p>We have a fine selection of medals.</p>
     <p>Please choose a section below.</p>
+    <p>Thank you for shopping with us!</p>
     <div>
 	<a href="bronze.html">Bronze medals</a>
     </div>
