--- a/medals.html
+++ b/medals.html
@@ -6,6 +6,12 @@
     <p>Please choose a section below.</p>
     <p>Thank you for shopping with us!</p>
     <div>
+	<a href="gold.html">Gold medals</a>
+    </div>
+    <div>
+	<a href="silver.html">Silver medals</a>
+    </div>
+    <div>
 	<a href="bronze.html">Bronze medals</a>
     </div>
   </body>
